@@ -1,1 +1,1 @@
-24.6.26
+24.6.27
