@@ -15790,3 +15790,5 @@ no todo: ("no") --> cmds.negated   <!-------------------------------------------
 no todo: some more .equals("no") to cmds.negated conversions like   <!-------------------------------------
 ---------------------------------- 2024-06-26 22:21:00 24.6.26
 no todo: scheduler asdf single-run as no respawn or something
+---------------------------------- 2024-06-26 22:40:01 24.6.26
+no todo: show config-backup if available
